--- a/css/style.css
+++ b/css/style.css
@@ -45,19 +45,23 @@
 
     --transition: all 400ms ease;
 }
+
 body {
     font-family: "Montserrat", sans-serif;
     line-height: 1.7;
     color: var(--color-gray-600);
     background: var(--color-gray-100);
 }
+
 .container {
     width: var(--container-width-lg);
     margin: 0 auto;
 }
+
 section {
     padding: 6rem 0;
 }
+
 section h2 {
     text-align: center;
     margin-bottom: 4rem;
@@ -86,11 +90,13 @@ h4 {
 a {
     color: var(--color-gray-900);
 }
+
 img {
     width: 100%;
     display: block;
     object-fit: cover;
 }
+
 .btn {
     font-size: 18px;
     letter-spacing: 2px;
@@ -108,6 +114,7 @@ img {
     transition: 0.3s ease all;
     z-index: 1;
 } 
+
 .btn:before {
     transition: 0.5s all ease;
     position: absolute;
@@ -120,20 +127,26 @@ img {
     background-color: var(--color-crimson);
     z-index: -1;
 } 
+
 .btn:hover, .btn:focus {
     color: var(--color-gray-100);
 } 
+
 .btn:hover:before, .btn:focus:before {
     transition: 0.5s all ease;
     left: 0;
     right: 0;
     opacity: 1;
 } 
+
 .btn:active {
     transform: scale(0.9);
 }
+
  
+
 /*  ---  NAVBAR  ---  */
+
 nav {
     background: transparent;
     width: 100vw;
@@ -143,36 +156,47 @@ nav {
     z-index: 11;
 }
 
+
+
 /*  ---  CHANGE NAVBAR STYLE ON SCROLL USING JAVASCRIPT  ---  */
+
 .window-scroll {
     background: rgba(96, 96, 96, 0.8);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(5px);
 }
+
 .nav__container {
     height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 nav button {
     display: none;
 }
+
 .nav__menu {
     display: flex;
     align-items: center;
     gap: 4rem;
 }
+
 .nav__menu a {
     font-size: 0.9rem;
     transition: var(--transition);
 }
+
 .nav__menu a:hover {
     text-decoration: underline;
     color: var(--color-crystal);
 }
 
+
+
 /*  ---  HEADER  ---  */
+
 header {
     position: relative;
     top: 5rem;
@@ -180,6 +204,7 @@ header {
     height: 80vh;
     margin-bottom: 5rem;
 }
+
 .header__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -187,122 +212,201 @@ header {
     gap: 5rem;
     height: 100%;
 }
+
 .header__left p {
     margin: 1rem 0 2.4rem;
 }
+
 .header__left h1 {
     color: var(--color-bg2);
 }
 
+
+
 /*  ---  CATEGORIES  ---  */
+
 .categories {
     background: var(--color-gray-200);
     height: 32rem;
 }
+
 .categories h1 {
     line-height: 1;
     margin-bottom: 3rem;
     color: var(--color-bg2);
 }
+
 .categories__container {
     display: grid;
     grid-template-columns: 40% 60%;
 }
+
 .categories__left {
     margin-right: 4rem;
 }
+
 .categories__left p {
     margin: 1rem 0 3rem;
     color: var(--color-gray-900);
 }
+
 .categories__right {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.2rem;
 }
+
 .category {
     background: var(--color-bg2);
     padding: 2rem;
     border-radius: 2rem;
     transition: var(--transition);
 }
+
 .category:hover {
     box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
+
 .category:nth-child(2) .category__icon {
     background: var(--color-danger);
 }
+
 .category:nth-child(3) .category__icon {
     background: var(--color-success);
 }
+
 .category:nth-child(4) .category__icon {
     background: var(--color-warning);
 }
+
 .category:nth-child(5) .category__icon {
     background: var(--color-success);
 }
+
 .category__icon {
     background: var(--color-primary);
     padding: 0.7rem;
     border-radius: 0.9rem;
 }
+
 .category h5 {
     margin: 2rem 0 1rem;
     color: var(--color-gray-100);
 }
+
 .category p {
     font-size: 0.85rem;
     color: var(--color-gray-100);
 }
 
+
+
 /*  ---  POPULAR COURSES  ---  */
+
 .courses {
     margin-top: 10rem;
 }
+
 .courses h2 {
     color: var(--color-bg2);
 }
+
 .courses__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
 }
+
 .course {
     background: var(--color-gray-200);
     text-align: center;
     border: 1px solid transparent;
     transition: var(--transition);
 }
+
 .course:hover {
     box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
+
 .course__info {
     padding: 2rem;
 }
+
 .course__info p {
     margin: 1.2rem 0 2rem;
     font-size: 0.9rem;
     color: var(--color-gray-900);
 }
+
 .course__info h4 {
     color: var(--color-bg2);
 }
 
+
+
+/*  ---  POPULAR ASSOCIATE DEGREE  ---  */
+
+.associates {
+    margin-top: 0.5rem;
+}
+
+.associates h2 {
+    color: var(--color-bg2);
+}
+
+.associates__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.associate {
+    background: var(--color-gray-200);
+    text-align: center;
+    border: 1px solid transparent;
+    transition: var(--transition);
+}
+
+.associate:hover {
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.associate__info {
+    padding: 2rem;
+}
+
+.associate__info p {
+    margin: 1.2rem 0 2rem;
+    font-size: 0.9rem;
+    color: var(--color-gray-900);
+}
+
+.associate__info h4 {
+    color: var(--color-bg2);
+}
+
+
+
 /*  ---  FREQUENTLY ASK QUESTIONS  ---  */
+
 .faqs {
     color: var(--color-gray-900);
 }
+
 .faqs h2 {
     color: var(--color-bg2);
 }
+
 .faqs__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
     color: var(--color-gray-900);
 }
+
 .faq {
     padding: 2rem;
     display: flex;
@@ -312,49 +416,62 @@ header {
     background: var(--color-gray-200);
     cursor: pointer;
 }
+
 .faq:hover {
     box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.2);
     transition: var(--transition);
     z-index: 1;
 }
+
 .faq h4 {
     font-size: 1rem;
     line-height: 2.2;
     color: var(--color-bg2);
 }
+
 .faq__icon {
     align-self: flex-start;
     font-size: 1.2rem;
 }
+
 .faq p {
     margin: 0.8rem;
     display: none;
     color: var(--color-gray-900);
 }
+
 .faq.open p {
     display: block;
 }
 
+
+
 /*  ---  EVENTS & ANNOUNCEMENTS  ---  */
+
 #event {
     margin-top: 1rem;
 }
+
 .event__head {
     display: center;
     justify-content: space-between;
 }
+
 .event__head h2 {
     color: var(--color-bg2);
 }
+
 .event__container p {
     width: 95rem;
     text-align: center;
 }
+
 .swiper-wrapper {
     margin-top: 3rem;
     height: 33rem;
     padding-bottom: 1rem;
 }
+
 .swiper-slide {
     border: 0.5rem solid var(--color-gray-200);
     height: fit-content;
@@ -362,52 +479,121 @@ header {
     overflow: hidden;
     transition: var(--transition);
 }
+
 .swiper-slide:hover {
     box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.4);
 }
+
 .swiper-slide img {
     filter: saturate(0);
     transition: var(--transition);
     aspect-ratio: 1;
     object-fit: fill;
 }
+
 .swiper-slide:hover img {
     filter: saturate(1);
 }
+
 .swiper-pagination-bullet {
     background: var(--color-bg2);
 }
 
+
+
+/*  ---  UNIVERSITY UNIFORM  ---  */
+
+#uniform {
+    margin-top: 1rem;
+}
+
+.uniform__head {
+    display: center;
+    justify-content: space-between;
+}
+
+.uniform__head h2 {
+    color: var(--color-bg2);
+}
+
+.uniform__container p {
+    width: 95rem;
+    text-align: center;
+}
+
+.swiper-wrapper {
+    margin-top: 3rem;
+    height: 33rem;
+    padding-bottom: 1rem;
+}
+
+.swiper-slide {
+    border: 0.5rem solid var(--color-gray-200);
+    height: fit-content;
+    max-height: 36rem;
+    overflow: hidden;
+    transition: var(--transition);
+}
+
+.swiper-slide:hover {
+    box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.4);
+}
+
+.swiper-slide img {
+    filter: saturate(0);
+    transition: var(--transition);
+    aspect-ratio: 1;
+    object-fit: fill;
+}
+
+.swiper-slide:hover img {
+    filter: saturate(1);
+}
+
+.swiper-pagination-bullet {
+    background: var(--color-bg2);
+}
+
+
+
 /*  ---  FOOTER  ---  */
+
 footer {
     background: var(--color-gray-200);
     padding-top: 5rem;
     font-size: 0.9rem;
 }
+
 .footer__container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 5rem;
 }
+
 .footer__container > div h4 {
     margin-bottom: 1.2rem;
 }
+
 .footer__1 p {
     margin: 0 0 2rem;
 }
+
 footer ul li {
     margin-bottom: 0.7rem;
 }
+
 footer ul li a:hover {
     text-decoration: underline;
     color: var(--color-crimson);
 }
+
 .footer__socials {
     display: flex;
     gap: 1rem;
     font-size: 1.2rem;
     margin-top: 2rem;
 }
+
 .footer__copyright {
     text-align: center;
     margin-top: 4rem;
@@ -415,7 +601,10 @@ footer ul li a:hover {
     border-top: 1px solid var(--color-crimson);
 }
 
+
+
 /*  ---  MEDIA QUERIES (TABLETS)  ---  */
+
 @media screen and (max-width: 1024px) {
    .container {
     width: var(--container-width-md);
@@ -424,17 +613,22 @@ footer ul li a:hover {
    h1 {
     font-size: 2.2rem;
    }
+
    h2 {
     font-size: 1.7rem;
    }
+
    h3 {
     font-size: 1.4rem;
    }
+
    h4 {
     font-size: 1.2rem;
    }
 
+
    /*  ---  NAVBAR  ---  */
+
    nav button {
     display: inline-block;
     background: transparent;
@@ -442,9 +636,11 @@ footer ul li a:hover {
     color: var(--color-gray-200);
     cursor: pointer;
    }
+
    nav button#close-menu-btn {
     display: none;
    }
+
    .nav__menu {
     position: fixed;
     top: 5rem;
@@ -455,6 +651,7 @@ footer ul li a:hover {
     gap: 0;
     display: none;
    }
+
    .nav__menu li {
     width: 100%;
     height: 5.8rem;
@@ -462,15 +659,19 @@ footer ul li a:hover {
     transform-origin: top right;
     opacity: 0;
    }
+
    .nav__menu li:nth-child(2) {
     animation-delay: 200ms;
    }
+
    .nav__menu li:nth-child(3) {
     animation-delay: 400ms;
    }
+
    .nav__menu li:nth-child(4) {
     animation-delay: 600ms;
    }
+
    .nav__menu li:nth-child(5) {
     animation-delay: 800ms;
    }
@@ -495,71 +696,93 @@ footer ul li a:hover {
     display: grid;
     place-items: center;
    }
+
    .nav__menu li a:hover {
     background: var(--color-gray-200);
     color: var(--color-crimson);
    }
 
+
    /*  ---  HEADER  ---  */
+
     header {
     height: 65vh;
     margin-bottom: 4rem;
    }
 
+
    /*  ---  CATEGORIES  ---  */
+
    .categories {
     height: auto;
    }
+
    .categories__container {
     grid-template-columns: 1fr;
     gap: 3rem;
    }
+
    .categories__left {
     margin-right: 0;
    }
 
+
    /*  ---  POPULAR COURSES  ---  */
+
    .courses {
     margin-top: 0;
    }
+
    .courses__container {
     grid-template-columns: 1fr 1fr;
    }
 
+
    /*  ---  FREQUENTLY ASK QUESTIONS  ---  */
+
    .faqs__container {
     grid-template-columns: 1fr;
    }
+
    .faq {
     padding: 1.5rem;
    }
 
+
    /*  ---  EVENTS & ANNOUNCEMENTS  ---  */
+
    #event {
     margin-top: 1rem;
    }
+
    .event__container p {
     width: 100%;
     margin-top: 2rem;
     text-align: center;
    }
+
    .swiper-wrapper {
     margin-top: 3rem;
     height: 25rem
    }
 
+
    /*   ---  FOOTER  ---  */
+
    .footer__container {
     grid-template-columns: 1fr 1fr;
     text-align: center;
     gap: 2rem;
    }
+
    .footer__1 p {
     margin: 1rem auto;
    }
+
    .footer__socials {
     justify-content: center;
    }
+
    .footer__logo {
     display: block;
     margin-left: auto;
@@ -568,78 +791,118 @@ footer ul li a:hover {
    }
 }
 
-/*  ---  MEDIA QUARIES (PHONE)  ---  */
+
+
+/*  ---  MEDIA QUERIES (PHONE)  ---  */
+
 @media screen and (max-width: 600px) {
     .container {
         width: var(--container-width-sm);
     }
 
+    h1 {
+        font-size: 1.8rem;
+       }
+    
+       h2 {
+        font-size: 1.3rem;
+       }
+    
+       h3 {
+        font-size: 1rem;
+       }
+    
+       h4 {
+        font-size: 0.8rem;
+       }
+
+
     /*  ---  NAVBAR  ---  */
+
     .nav__menu {
         right: 3%;
     }
 
+
     /*  ---  HEADER  ---  */
+
     header {
         height: 80vh;
     }
+
     .header__container {
         grid-template-columns: 1fr;
         text-align: center;
         margin-top: 0;
     }
+
     .header__left p {
         margin-bottom: 1.3rem;
     }
+
     .header__right-image {
         display: none;
     }
 
+
     /*  ---  CATEGORIES  ---  */
+
     .categories__right {
         grid-template-columns: 1fr 1fr;
         gap: 0.7rem;
     }
+
     .category {
         padding: 1rem;
         border-radius: 1rem;
     }
+
     .category__icon {
         margin-top: 4px;
         display: inline-block;
     }
 
+
     /*  ---  POPULAR COURSES  ---  */
+
     .courses__container {
         grid-template-columns: 1fr;
     }
 
+
     /*  ---  EVENTS & ANNOUNCEMENTS  ---  */
+
     #event {
         margin-top: 1rem;
         text-align: center;
     }
+
     .swiper-wrapper {
         margin-top: 3rem;
         height: 28rem;
     }
 
+
     /*  ---  FOOTER  ---  */
+
     .footer__container {
         grid-template-columns: 1fr;
         text-align: center;
         gap: 2rem;
     }
+
     .footer__1 p {
         margin: 1rem auto;
     }
+
     .footer__socials {
         justify-content: center;
     }
+
     .footer__logo {
         display: block;
         margin-left: auto;
         margin-right: auto;
         width: 50%;
-    }
+                   }
 }
